force-app/main/default/objects/Apttus__AgreementActionCondition__c/Apttus__AgreementActionCondition__c.object-meta.xml
<CustomObject>
    <description>Represents conditions to enable agreement actions</description>
    <label>Agreement Action Condition</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Action Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>