force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Activate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Activate__c</fullName>
    <description>Indicator to activate the agreement</description>
    <formula>OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Filing&quot;), AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__AgreementId__r.Apttus__Source__c,&quot;Other Party Paper&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to activate the agreement</inlineHelpText>
    <label>Activate</label>
    <type>Checkbox</type>
</CustomField>