force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementId__c</fullName>
    <description>ID of the associated agreement</description>
    <inlineHelpText>ID of the associated agreement</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Action Conditions</relationshipLabel>
    <relationshipName>ActionConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>