force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Amend__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Amend__c</fullName>
    <description>Indicator to amend the agreement</description>
    <formula>OR(AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Renewed&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to amend the agreement</inlineHelpText>
    <label>Amend</label>
    <type>Checkbox</type>
</CustomField>