force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__CancelRequest__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CancelRequest__c</fullName>
    <description>Indicator to cancel the agreement request</description>
    <formula>AND(OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;Request&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Cancelled Request&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to cancel the agreement request</inlineHelpText>
    <label>Cancel Request</label>
    <type>Checkbox</type>
</CustomField>