force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Expire__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Expire__c</fullName>
    <description>Indicator to expire the agreemen</description>
    <formula>OR(AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Renewed&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to expire the agreemen</inlineHelpText>
    <label>Expire</label>
    <type>Checkbox</type>
</CustomField>