force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__GenerateSupportingDocument__c.field-meta.xml
<CustomField>
    <fullName>Apttus__GenerateSupportingDocument__c</fullName>
    <description>Indicator to generate supporting documents for the agreement</description>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to generate supporting documents for the agreement</inlineHelpText>
    <label>Generate Supporting Document</label>
    <type>Checkbox</type>
</CustomField>