force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__ImportOfflineDocument__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ImportOfflineDocument__c</fullName>
    <description>Indicator to import offline documents</description>
    <formula>NOT(OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, &quot;In Effect&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, &quot;Expired&quot;),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, &quot;Terminated&quot;),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, &quot;Amended&quot;),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c, &quot;Cancelled&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to import offline documents</inlineHelpText>
    <label>Import Offline Document</label>
    <type>Checkbox</type>
</CustomField>