force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__InitiateTermination__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InitiateTermination__c</fullName>
    <description>Indicator to initiate termination of the agreement</description>
    <formula>OR(AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Terminated&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to initiate termination of the agreement</inlineHelpText>
    <label>Initiate Termination</label>
    <type>Checkbox</type>
</CustomField>