force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Regenerate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Regenerate__c</fullName>
    <description>Indicator to preview agreement documents</description>
    <formula>OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Filing&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to preview agreement documents</inlineHelpText>
    <label>Regenerate</label>
    <type>Checkbox</type>
</CustomField>