force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__Renew__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Renew__c</fullName>
    <description>Indicator to renew the agreement</description>
    <formula>OR(AND((ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Effect&quot;)),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Being Amended&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to renew the agreement</inlineHelpText>
    <label>Renew</label>
    <type>Checkbox</type>
</CustomField>