force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__SendForSignatures__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SendForSignatures__c</fullName>
    <description>Indicator to send agreement for signatures</description>
    <formula>OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;In Authoring&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to send agreement for signatures</inlineHelpText>
    <label>Send For Signatures</label>
    <type>Checkbox</type>
</CustomField>