force-app/main/default/objects/Apttus__AgreementActionCondition__c/fields/Apttus__SubmitRequest__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SubmitRequest__c</fullName>
    <description>Indicator to submit agreement request</description>
    <formula>AND(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status_Category__c,&quot;Request&quot;),OR(ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;Request&quot;),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;In Amendment&quot;),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;In Renewal&quot;),ISPICKVAL(Apttus__AgreementId__r.Apttus__Status__c,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator to submit agreement request</inlineHelpText>
    <label>Submit Request</label>
    <type>Checkbox</type>
</CustomField>